--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,6 @@ targetCompatibility = 1.8
 dependencies {
     compile "mysql:mysql-connector-java:5.1.6"
 }
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
