--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile "mysql:mysql-connector-java:5.1.6"
+    compile "org.clojure:java.jdbc:0.6.1"
+    compile "mysql:mysql-connector-java:5.1.40"
 }
 
 task stage(dependsOn: ['build', 'clean'])
