--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,14 @@ jar {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+repositories {
+   flatDir {
+       dirs 'libs'
+   }
+}
+
 dependencies {
-    compile "org.clojure:java.jdbc:0.6.1"
-    compile "mysql:mysql-connector-java:5.1.40"
+    compile name : 'mysql-connector-java-5.1.40-bin'
 }
 
 task stage(dependsOn: ['build', 'clean'])
