--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
    mavenCentral()
 }
 dependencies {
-   compile 'com.mysql:mysql-connector-java:5.1.6'
+   compile 'mysql:mysql-connector-java:5.1.6'
 }
 
 task stage(dependsOn: ['build', 'clean'])
