--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,13 +1,22 @@
 #Server Properties
 fieldNames=nuts,dairy
 minVoteSeperation=2
+#port number no longer used
 port=46485
-#Code values
-contains=2
-trace=1
-none=0
-unknown=-1
+#Code values 0,1,2,3 becasue SQL null is 0
+contains=3
+trace=2
+none=1
+unknown=0
 #MySQL Login
 url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_7cff53c6dc1d9d0?reconnect=true
+#url=jdbc:mysql://localhost/food?reconnect=true
 user=bb54e9fa302cfd
 pass=17e9ce90
+#user=root
+#pass=DoctorWh0!
+
+#Databse Properties
+foodTableName=foodTable
+#dbName=food
+dbName=heroku_7cff53c6dc1d9d0
