--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ jar {
 
     manifest {
     attributes(
-      'Main-Class': 'server.Main'
+      'Main-Class': 'server.Main',
+      'Class-Path': 'mysql-connector-java-5.1.6.jar'
     )
   }
 }
