--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ jar {
     manifest {
     attributes(
       'Main-Class': 'server.Main',
-      'Class-Path': 'mysql-connector-java-5.1.6.jar'
+      'Class-Path': '../../mysql-connector-java-5.1.6.jar'
     )
   }
 }
