Cleaned the code up a bit

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #Server Properties
 tertiaryFieldNames=nuts,dairy
 binaryFieldNames=vegetarian,vegan
-continuousFieldNames=sugar,fat,calories
-minVoteSeperation=1
+continuousFieldNames=
+minVoteSeperation=0
 #port number no longer used
 port=46485
 #Code values 0,1,2,3 becasue SQL null is 0
