Added the most common allergies as fields

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Server Properties
-tertiaryFieldNames=nuts,dairy
+tertiaryFieldNames=milk,eggs,peanuts,treeNuts,soy,wheatGluten,fish,shellFish
 binaryFieldNames=vegetarian,vegan
 continuousFieldNames=
 minVoteSeperation=0
