Added TESCO API integration

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,22 @@
 #Server Properties
 tertiaryFieldNames=milk,eggs,peanuts,treeNuts,soy,wheatGluten,fish,shellFish
+
+#These are alternate names for allergens (in lower case)
+milkAlts=milk,dairy,lactose,casein,caseinate,cream,butter,cheese,whey,ghee,crème fraiche,fromage frais,yogurt,curd,quark,lactoalbumin,lactoglobulin,lactic acid,E270
+eggsAlts=egg,lactalbumin
+peanutsAlts=peanut
+treeNutsAlts=almond,brazil nut,cashew,chestnut,hazelnut,cob nut,filbert,macadamia nut,pecan,pistachio,pine nut,shea nut,walnut,queensland nut,marzioan,earth nut,goober nut,goober pea,groundnut,mandalona nut,manilla nut,monkey nut,pinda,pinder
+soyAlts=soy,soya,tofu,edamame,textured vegetable protien,tvp,hoi sin,hydrolysed vegetable protien,E471
+wheatGlutenAlts=gluten,wheat,flour,semolina,durum wheat,cous cous,liquorice,barely,oat,einkorn,emmer,rye,spelt
+fishAlts=fish
+shellFishAlts=shellfish,crustacean,crab,lobster,crayfish,shrimp,prawn,krill,langouste,langoustine,scampi
+#moluscs=moluscs,clams,cockles,mussels,oysters,scallops,whelks,winkles,snails,cuttlefish,octopus,squid
+
 binaryFieldNames=vegetarian,vegan
 continuousFieldNames=
 minVoteSeperation=0.1
-#port number no longer used
-port=46485
+tescoUrl=https://dev.tescolabs.com/product/
+key=038cb4bf25534ee6bb99fa17c4375fbf
 #Code values 0,1,2,3 becasue SQL null is 0
 contains=3
 trace=2
