Extended config alts for increased accuracey

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,16 +3,23 @@ tertiaryFieldNames=milk,eggs,peanuts,treeNuts,soy,wheatGluten,fish,shellFish
 
 #These are alternate names for allergens (in lower case)
 milkAlts=milk,dairy,lactose,casein,caseinate,cream,butter,cheese,whey,ghee,crème fraiche,fromage frais,yogurt,curd,quark,lactoalbumin,lactoglobulin,lactic acid,E270
-eggsAlts=egg,lactalbumin
+eggsAlts=egg,lactalbumin,albumin
 peanutsAlts=peanut
 treeNutsAlts=almond,brazil nut,cashew,chestnut,hazelnut,cob nut,filbert,macadamia nut,pecan,pistachio,pine nut,shea nut,walnut,queensland nut,marzioan,earth nut,goober nut,goober pea,groundnut,mandalona nut,manilla nut,monkey nut,pinda,pinder
 soyAlts=soy,soya,tofu,edamame,textured vegetable protien,tvp,hoi sin,hydrolysed vegetable protien,E471
 wheatGlutenAlts=gluten,wheat,flour,semolina,durum wheat,cous cous,liquorice,barely,oat,einkorn,emmer,rye,spelt
-fishAlts=fish
-shellFishAlts=shellfish,crustacean,crab,lobster,crayfish,shrimp,prawn,krill,langouste,langoustine,scampi
+fishAlts=fish,anchovy,mackerel,sea bream,basa,monkfish,snapper,cod,perch,swordfish,cuttlefish,pike,trout,eel,pilchards,tuna,grouper,plaice,turbot,flounder,pollock,whitebait,haddock,salmon,whiting,hake,sardine,salibut,sea bass
+shellFishAlts=shellfish,crustacean,crab,lobster,crayfish,shrimp,prawn,krill,langouste,langoustine,scampi,moluscs,clams,cockles,mussels,oysters,scallops,whelks,winkles,snails,cuttlefish,octopus,squid
 #moluscs=moluscs,clams,cockles,mussels,oysters,scallops,whelks,winkles,snails,cuttlefish,octopus,squid
 
 binaryFieldNames=vegetarian,vegan
+
+#These are alternate names for allergens (in lower case)
+#Theseboth include the fiush and shellfish alts
+vegetarianAlts=tallow,suet,stearic acid,pepsin,oleic acid,oleinic acid,lecithin,lard,lactylic stearate,isinglass,glyceride,gelatin,animal shortening,fish,anchovy,mackerel,sea bream,basa,monkfish,snapper,cod,perch,swordfish,cuttlefish,pike,trout,eel,pilchards,tuna,grouper,plaice,turbot,flounder,pollock,whitebait,haddock,salmon,whiting,hake,sardine,salibut,sea bass,shellfish,crustacean,crab,lobster,crayfish,shrimp,prawn,krill,langouste,langoustine,scampi,moluscs,clams,cockles,mussels,oysters,scallops,whelks,winkles,snails,cuttlefish,octopus,squid
+#Thsi should include the egg and milk alts
+veganAlts=whey,tallow,suet,stearic acid,pepsin,oleicacid,oleinic acid,lecithin,lard,lactylic stearate,isinglass,glyceride,gelatin,animal shortening,milk,dairy,lactose,casein,caseinate,cream,butter,cheese,whey,ghee,crème fraiche,fromage frais,yogurt,curd,quark,lactoalbumin,lactoglobulin,lactic acid,E270,egg,lactalbumin,albumin,fish,anchovy,mackerel,sea bream,basa,monkfish,snapper,cod,perch,swordfish,cuttlefish,pike,trout,eel,pilchards,tuna,grouper,plaice,turbot,flounder,pollock,whitebait,haddock,salmon,whiting,hake,sardine,salibut,sea bass,shellfish,crustacean,crab,lobster,crayfish,shrimp,prawn,krill,langouste,langoustine,scampi,moluscs,clams,cockles,mussels,oysters,scallops,whelks,winkles,snails,cuttlefish,octopus,squid
+
 continuousFieldNames=
 minVoteSeperation=0.1
 tescoUrl=https://dev.tescolabs.com/product/
