Switched back SQL details

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -30,14 +30,14 @@ trace=2
 none=1
 unknown=0
 #MySQL Login
-#url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_7cff53c6dc1d9d0?reconnect=true
-url=jdbc:mysql://localhost/food?reconnect=true&verifyServerCertificate=false
-#user=bb54e9fa302cfd
-#pass=17e9ce90
-user=root
-pass=DoctorWh0!
+url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_7cff53c6dc1d9d0?reconnect=true
+#url=jdbc:mysql://localhost/food?reconnect=true&verifyServerCertificate=false
+user=bb54e9fa302cfd
+pass=17e9ce90
+#user=root
+#pass=DoctorWh0!
 
 #Databse Properties
 foodTableName=foodTable
-dbName=food
-#dbName=heroku_7cff53c6dc1d9d0
+#dbName=food
+dbName=heroku_7cff53c6dc1d9d0
